<resources>
    <string name="app_name">Calculator</string>
    <string name="b2">2</string>
    <string name="b1">1</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b0">0</string>
    <string name="C">C</string>
    <string name="add_b">+</string>
    <string name="sub_b">-</string>
    <string name="mult_b">*</string>
    <string name="div_b">/</string>
    <string name="dot_b">.</string>
    <string name="percent_b">%</string>
    <string name="equal_b">=</string>
    <string name="bracets_b">( )</string>
    <string name="back_b">back</string>


</resources>
