<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.agupta1409.calculator.Calculator">


    <EditText
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:inputType="numberDecimal"
        android:id="@+id/etNumber"
        android:clickable="false"
        android:ems="200"
        android:layout_below="@+id/tvDisplay"
        android:gravity="bottom|right"
        android:layout_alignRight="@+id/GridLayout"
        android:layout_alignEnd="@+id/GridLayout"
        android:layout_alignLeft="@+id/GridLayout"
        android:layout_alignStart="@+id/GridLayout"
        android:textSize="40dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:clickable="false"
        android:textColor="@color/dim_foreground_material_dark"
        android:id="@+id/tvDisplay"
        android:gravity="bottom|right"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/etNumber"
        android:layout_alignStart="@+id/etNumber"
        android:textSize="40dp"
        android:text="0"
        android:layout_alignRight="@+id/etNumber"
        android:layout_alignEnd="@+id/etNumber" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="true"
        android:orientation="horizontal"
        android:id="@+id/GridLayout"
        android:layout_below="@+id/etNumber"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:maxWidth="50dp"
            android:text="@string/C"
            android:textSize="@dimen/button_text_size"
            android:background="@color/operators_background"
            android:textColor="@color/operator_text_color"
            android:id="@+id/clear"
            android:layout_row="0"
            android:layout_column="0" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/dot_b"
            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"
            android:textColor="@color/operator_text_color"


            android:id="@+id/dot"
            android:maxWidth="60dp"
            android:layout_row="0"
            android:layout_column="1" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/operators_background"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/back_b"
            android:textSize="@dimen/button_text_size"
            android:background="@color/operators_background"
            android:textColor="@color/operator_text_color"
            android:id="@+id/back"
            android:maxWidth="60dp"
            android:layout_row="0"
            android:layout_column="2" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/add_b"
            android:textSize="@dimen/button_text_size"
            android:background="@color/operators_background"
            android:textColor="@color/operator_text_color"
            android:id="@+id/add"
            android:maxWidth="50dp"
            android:layout_row="0"
            android:layout_column="3" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/b1"
            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"
            android:textColor="@color/number_text_color"
            android:id="@+id/b1"
            android:maxWidth="60dp"
            android:layout_row="1"
            android:layout_column="0" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/b2"
            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"

            android:id="@+id/b2"
            android:maxWidth="60dp"
            android:layout_row="1"
            android:layout_column="1" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"
            android:textColor="@color/number_text_color"
            android:text="@string/b3"
            android:id="@+id/b3"
            android:maxWidth="60dp"
            android:layout_row="1"
            android:layout_column="2" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/sub_b"
            android:textSize="@dimen/button_text_size"
            android:background="@color/operators_background"
            android:textColor="@color/operator_text_color"

            android:id="@+id/sub"
            android:maxWidth="50dp"
            android:layout_row="1"
            android:layout_column="3" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/b4"
            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"

            android:id="@+id/b4"
            android:maxWidth="60dp"
            android:layout_row="2"
            android:layout_column="0" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/b5"
            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"

            android:id="@+id/b5"
            android:maxWidth="60dp"
            android:layout_row="2"
            android:layout_column="1" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/b6"
            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"

            android:id="@+id/b6"
            android:maxWidth="60dp"
            android:layout_row="2"
            android:layout_column="2" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/mult_b"
            android:textSize="@dimen/button_text_size"
            android:background="@color/operators_background"
            android:textColor="@color/operator_text_color"

            android:id="@+id/multiply"
            android:maxWidth="50dp"
            android:layout_row="2"
            android:layout_column="3" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/b7"
            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"

            android:id="@+id/b7"
            android:maxWidth="60dp"
            android:layout_row="3"
            android:layout_column="0" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/b8"
            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"

            android:id="@+id/b8"
            android:maxWidth="60dp"
            android:layout_row="3"
            android:layout_column="1" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/b9"
            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"

            android:id="@+id/b9"
            android:maxWidth="60dp"
            android:layout_row="3"
            android:layout_column="2" />
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/div_b"
            android:textSize="@dimen/button_text_size"
            android:background="@color/operators_background"
            android:textColor="@color/operator_text_color"

            android:id="@+id/divide"
            android:maxWidth="50dp"
            android:layout_row="3"
            android:layout_column="3" />
        <Space android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/b0"
            android:textSize="@dimen/button_text_size"
            android:background="@color/number_text__background_color"

            android:id="@+id/b0"
            android:maxWidth="60dp"
            android:layout_row="4"
            android:layout_column="1" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"

            android:text="@string/equal_b"
            android:textSize="@dimen/button_text_size"
            android:background="@color/operator_text_color"
            android:textColor="@color/operators_background"
            android:id="@+id/equal"
            android:maxWidth="50dp"
            android:layout_row="4"
            android:layout_column="3" />


    </GridLayout>
</RelativeLayout>
